--- a/static/css/registration_form.css
+++ b/static/css/registration_form.css
@@ -1,5 +1,9 @@
 #content{
     margin-left: auto;
     margin-right: auto;
-    width: 6em
+}
+form{
+    margin-left: 300px;
+    margin-right: 300px;
+    align-self: center;
 }
