Шаблон формы авторизации изменен

--- a/static/css/registration_form.css
+++ b/static/css/registration_form.css
@@ -3,7 +3,7 @@
     margin-right: auto;
 }
 form{
-    margin-left: 300px;
-    margin-right: 300px;
+    margin-left: 15%;
+    margin-right: 20%;
     align-self: center;
 }
