--- a/static/css/login_form.css
+++ b/static/css/login_form.css
@@ -1,6 +1,5 @@
 #content{
     position: absolute;
-    margin-left: 50%;
-    margin-top: 50%;
-    transform: translate(-50%, -50%);
+    margin-left: 40%;
+    margin-right: 30%;
 }
