--- a/static/css/registration_form.css
+++ b/static/css/registration_form.css
@@ -1,7 +1,11 @@
 #content{
-    margin-left: auto;
-    margin-right: auto;
+    display: inline-block;
+    position: absolute;
+    margin-top: 0%;
+    margin-left: 40%;
+    margin-right: 30%;
 }
+
 form{
     margin-left: 15%;
     margin-right: 20%;
