--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <header>
         <h1>Video.get</h1>
         {% if current_user.is_authenticated %}
-            <a href="/logout">Выход из аккаунта</a>
+                <a id='logout' href="/logout" >Выход из аккаунта</a>
         {% endif %}
     </header>
     <div>
