--- a/templates/add_news_form.html
+++ b/templates/add_news_form.html
@@ -11,11 +11,11 @@
     <form action="" method="post" enctype="multipart/form-data">
         {{form.hidden_tag()}}
         <p>
-            {{form.title(class="form-control")}}
+            {{form.title(class="form-control", value=data["title"])}}
             
         </p>
         <p>
-            {{form.data(class="form-control", id="data")}}
+            {{form.data(class="form-control", id="data", content=data["data"])}}
         </p>
         <p>
             {{form.files(class="form-control")}}
