добавлено удаление, добавление и просмотр расписания звонков

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,9 @@
                 <p>
                     <a href="/news/add">Добавление новостей </a>
                 </p>
+                <p>
+                    <a href="/schedule/calls/add">Добавление расписания звонков</a>
+                </p>
             {% endif %}
             <p>
                 <a href="/schedule/calls">Раписание звонков</a>
