--- a/templates/video.html
+++ b/templates/video.html
@@ -5,6 +5,6 @@
         <video controls>
             <source src="{{url_for('uploaded_file', file=video)}}" type="video/mp4">
         </video>
-        <a href="#" onclick="history.back();return false;">Вернуться назад</a>
+        <a href="#" onclick="history.back();return false;" class="btn btn-primary">Вернуться назад</a>
     </div>
 {% endblock %}
