--- a/templates/add_schedule_form.html
+++ b/templates/add_schedule_form.html
@@ -47,10 +47,8 @@
             </p>
         </p>
     </form>
-    <button class="open_menu" onclick="open_schedule_menu()">
-        <h3>
+    <button class="open_menu btn btn-secondary" onclick="open_schedule_menu()" >
             Пример написания расписания
-        </h3>
     </button>
     <div class="menu">
         <p>
@@ -65,7 +63,7 @@
         popup.style.display = 'none';
     
         open.addEventListener('click', function() {
-        if(popup.style.display == 'none') popup.style.display = 'inline-block';
+        if(popup.style.display == 'none') popup.style.display = 'block';
         else popup.style.display = 'none'});}
         </script>
 </div>
