--- a/templates/base.html
+++ b/templates/base.html
@@ -8,66 +8,67 @@
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/base.css">
-    
+
     <title>{{title}}</title>
 </head>
 <body>
-    <header>
-        <h1>School Bot</h1>
-        {% if current_user.is_authenticated %}
-                <a id='logout' href="/logout" class="btn btn-danger">Выход</a>
+<header>
+    <h1>School Bot</h1>
+    {% if current_user.is_authenticated %}
+    <a id='logout' href="/logout" class="btn btn-danger">Выход</a>
+    {% endif %}
+</header>
+<div>
+    <button class="open btn btn-primary">☰</button>
+    <nav class="nav_menu" id="content_nav_menu">
+        <h2>
+            Меню
+        </h2>
+
+        <p>
+            <a href="/news">Новости</a>
+        </p>
+        <p>
+            <a href="/schedule/lessons">Раписание уроков</a>
+        </p>
+        <p>
+            <a href="/schedule/calls">Раписание звонков</a>
+        </p>
+        {% if not current_user.is_authenticated %}
+        <p>
+            <a href="/login">Войти в аккаунт</a>
+        </p>
+        <p>
+            <a href="/registration">Зарегистрироваться</a>
+        </p>
         {% endif %}
-    </header>
-    <div>
-        <button class="open btn btn-primary">☰</button>
-        <nav class="nav_menu" id="content_nav_menu">
-            <h2>
-                Меню
-            </h2>
+        {% if current_user.is_authenticated and current_user.roles.name == "admin" %}
+        <p>
+            <a href="/news/add">Добавление новостей </a>
+        </p>
+        <p>
+            <a href="/schedule/lessons/add">Добавление расписания уроков</a>
+        </p>
+        <p>
+            <a href="/schedule/calls/add">Добавление расписания звонков</a>
+        </p>
+        <p>
+            <a href="/users">Пользователи</a>
+        </p>
+        {% endif %}
+    </nav>
+    <script>
+        var popup = document.querySelector('.nav_menu');
+        var open = document.querySelector('.open');
+        popup.style.display = 'none';
 
-            <p>
-                <a href="/news">Новости</a>
-            </p>
-            <p>
-                <a href="/schedule/lessons">Раписание уроков</a>
-            </p>
-            <p>
-                <a href="/schedule/calls">Раписание звонков</a>
-            </p>
-            {% if not current_user.is_authenticated %}
-                <p>
-                    <a href="/login">Войти в аккаунт</a>
-                </p>
-                <p>
-                    <a href="/registration">Зарегистрироваться</a>
-                </p>
-            {% endif %}
-            {% if current_user.is_authenticated and current_user.roles.name == "admin" %}
-                <p>
-                    <a href="/schedule/lessons/add">Добавление расписания уроков</a>
-                </p>
-                <p>
-                    <a href="/news/add">Добавление новостей </a>
-                </p>
-                <p>
-                    <a href="/schedule/calls/add">Добавление расписания звонков</a>
-                </p>
-            <p>
-                <a href="/users">Пользователи</a>
-            </p>
-            {% endif %}
-        </nav>
-        <script>
-            var popup = document.querySelector('.nav_menu');
-            var open = document.querySelector('.open');
-            popup.style.display = 'none';
-    
-            open.addEventListener('click', function() {
-            if(popup.style.display == 'none') popup.style.display = 'inline-block';
-            else popup.style.display = 'none'});</script>
-    </div>
+        open.addEventListener('click', function () {
+            if (popup.style.display == 'none') popup.style.display = 'inline-block';
+            else popup.style.display = 'none'
+        });</script>
+</div>
 
-    {% block content %}
-    {% endblock %}
+{% block content %}
+{% endblock %}
 </body>
 </html>
