--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -33,5 +33,6 @@
         <p>{{ form.remember_me() }} Запомнить меня</p>
         <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
     </form>
+    <a href="/account/recovery">Восстановить аккаунт</a>
 </div>
 {% endblock %}
