--- a/templates/schedule_lessons.html
+++ b/templates/schedule_lessons.html
@@ -5,20 +5,23 @@
 <div id="content">
     <h1 id="title">Расписание {{grade}}</h1>
     {% for el in data %}
-        <p>
-            <h2 id="weekday">{{el.weekday.title()}}</h2>
-            <table border="2px black" align="center">
-                {% for lesson in el.schedule.split('\n') %}
-                    <tr><td id=lesson align="center">{{lesson}}</td></tr>
-                {% endfor %}
-            </table>
-            {% if current_user.is_authenticated %}
-                {% if current_user.roles.name == "admin" %}
-                <a href="/schedule/lessons/{{grade}}/{{el.weekday}}/edit" class="btn btn-primary">Изменить</a>
-                {% endif %}
-            {% endif %}
-            <a href="#" onclick="history.back();return false;" class="btn btn-primary">Вернуться назад</a>
-        </p>
+    <p>
+    <h2 id="weekday">{{el.weekday.title()}}</h2>
+    <table border="2px black" align="center">
+        {% for lesson in el.schedule.split('\n') %}
+        <tr>
+            <td id=lesson align="center">{{lesson}}</td>
+        </tr>
+        {% endfor %}
+    </table>
+    {% if current_user.is_authenticated %}
+    {% if current_user.roles.name == "admin" %}
+    <a href="/schedule/lessons/{{grade}}/{{el.weekday}}/edit" class="btn btn-primary">Изменить</a>
+    <a href="/schedule/lessons/delete/{{grade}}/{{el.weekday}}" class="btn btn-primary">Удалить</a>
+    {% endif %}
+    {% endif %}
+    <a href="#" onclick="history.back();return false;" class="btn btn-primary">Вернуться назад</a>
+    </p>
     {% endfor %}
 </div>
 {% endblock %}
